<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_cuenta"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_planta_base"
        android:orderInCategory="101"
        android:title="@string/Plantas_a_la_base"
        app:showAsAction="never" />
    <item
        android:id="@+id/amigos"
        android:orderInCategory="101"
        android:title="@string/Galeria_Amigos"
        app:showAsAction="never" />
    <item
        android:id="@+id/Notificacion"
        android:orderInCategory="101"
        android:title="@string/notificaciones"
        app:showAsAction="never" />

</menu>
