<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/inicio" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/calendario_de_floracion"
            android:background="@color/gris_oscuro" />

        <item
            android:id="@+id/mi_cuenta"
            android:title="Mi cuenta"
            android:icon="@drawable/ic_launcher_foreground"/>

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_slideshow"
            android:background="@color/gris_oscuro" />

        <item
            android:id="@+id/misplantas"
            android:title="Mis Plantas"
            android:icon="@drawable/grain_png"/>
    </group>
</menu>
