<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <Button
        android:id="@+id/Google_btn"
        android:layout_width="139dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        android:text="@string/google"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/registrar_boton" />

    <Button
        android:id="@+id/Facebook"
        android:layout_width="129dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#3A4FC5"
        android:text="Facebook"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/Google_btn"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/registrar_boton" />

    <View
        android:id="@+id/view"
        android:layout_width="328dp"
        android:layout_height="623dp"
        android:layout_marginTop="36dp"
        android:background="#80D3D3D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="171dp"
        android:layout_height="171dp"
        android:layout_gravity="center"
        android:background="@drawable/circle_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view2"
        android:layout_width="274dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:background="@drawable/cuadrado_rendodo"
        app:layout_constraintBottom_toBottomOf="@+id/correo_view"
        app:layout_constraintEnd_toEndOf="@+id/correo_view"
        app:layout_constraintStart_toStartOf="@+id/correo_view" />

    <View
        android:id="@+id/view3"
        android:layout_width="274dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:background="@drawable/cuadrado_rendodo"
        app:layout_constraintBottom_toBottomOf="@+id/contrasenia_view"
        app:layout_constraintEnd_toEndOf="@+id/contrasenia_view"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="@+id/contrasenia_view" />

    <EditText
        android:id="@+id/contrasenia_view"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:layout_marginTop="332dp"
        android:ems="10"
        android:hint="@string/ingresa_contrasenia"
        android:inputType="textPassword"
        android:textColorHint="#424242"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/correo_view"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:layout_marginTop="232dp"
        android:ems="10"
        android:hint="@string/ingresa_correo"
        android:inputType="textEmailAddress"
        android:textColorHint="#424242"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textColor="#424242"
        app:layout_constraintBottom_toTopOf="@+id/correo_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrasenia"
        android:textColor="#424242"
        app:layout_constraintBottom_toTopOf="@+id/contrasenia_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="127dp"
        android:layout_height="127dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grain_png"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/registrar_boton"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:layout_marginTop="396dp"
        android:onClick="iniciar"
        android:text="@string/btn_iniciar_sesion"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContrastRatio" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_cuenta"
        android:textColor="#424242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Google_btn"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="registrar"
        android:text="@string/registrarse"
        android:textColor="#09C010"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0187"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/Google_btn"
        app:layout_constraintVertical_bias="0.217"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>
