<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cuenta">

    <View
        android:id="@+id/view"
        android:layout_width="329dp"
        android:layout_height="561dp"
        android:background="#80D3D3D3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="171dp"
        android:layout_height="171dp"
        android:layout_gravity="center"
        android:background="@drawable/circle_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view2"
        android:layout_width="274dp"
        android:layout_height="46dp"
        android:background="@drawable/cuadrado_rendodo"
        app:layout_constraintBottom_toBottomOf="@+id/contrasenia_view"
        app:layout_constraintEnd_toEndOf="@+id/contrasenia_view"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="@+id/contrasenia_view" />

    <View
        android:id="@+id/view3"
        android:layout_width="274dp"
        android:layout_height="46dp"
        android:background="@drawable/cuadrado_rendodo"
        app:layout_constraintBottom_toBottomOf="@+id/correo_view"
        app:layout_constraintEnd_toEndOf="@+id/correo_view"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="@+id/correo_view" />

    <TextView
        android:id="@+id/contrasenia_view"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:layout_marginTop="340dp"
        android:ems="10"
        android:gravity="center"
        android:textColorHint="#424242"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/correo_view"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:textColorHint="#424242"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textColor="#424242"
        app:layout_constraintBottom_toTopOf="@+id/correo_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.928" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrasenia"
        android:textColor="#424242"
        app:layout_constraintBottom_toTopOf="@+id/contrasenia_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.957" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="127dp"
        android:layout_height="127dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grain_png"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/cerrar_sesion_btn"
        android:layout_width="282dp"
        android:layout_height="57dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#F44336"
        android:text="@string/cerrar_sesion"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>